# axfr

./: #axfrlib.cpp#  .cproject  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .project  AxfrDatabase.hpp  CMakeCache.txt  CMakeLists.txt  Dockerfile  InputReader.cpp  InputReader.h  Krb5Config.cmake  LICENSE  Makefile  README.md  ScannedDomain.hpp  analysis.R  axfrLookup.cpp  axfrLookup.h  axfrlib.cpp  cmake_install.cmake  config.h  config.status  database.db  digQuery.c  digQuery.h  dighost.c  install.sh  ip.input  m_vector.cpp  m_vector.cpp~  main.cpp  performWhoIs.py  process_folder.sh  process_list.sh  shufflePairs.sh  tmp  whois.py
GeneralUtils/: ms_response_list.c  ms_response_list.h
Scanner/: AxfrDatabase.hpp  InputReader.cpp  InputReader.h  ScannedDomain.hpp  ScanningResult.hpp  axfrLookup.cpp  axfrLookup.cpp.orig  axfrLookup.h
bind_lib/: CMakeLists.txt  Makefile  config.h  config.status  isc-config.sh  libtool
bind_lib/doc/: Makefile
bind_lib/doc/arm/: Makefile
bind_lib/doc/doxygen/: Makefile
bind_lib/doc/draft/: draft-hibbs-dns-server-mib-01.txt
bind_lib/doc/misc/: Makefile
bind_lib/doc/tex/: Makefile
bind_lib/doc/xsl/: Makefile
bind_lib/lib/: Makefile
bind_lib/lib/bind/: Makefile  config.h  config.status  port_before.h
bind_lib/lib/bind/bsd/: Makefile
bind_lib/lib/bind/dst/: Makefile
bind_lib/lib/bind/include/: Makefile
bind_lib/lib/bind/inet/: Makefile
bind_lib/lib/bind/irs/: Makefile
bind_lib/lib/bind/isc/: Makefile
bind_lib/lib/bind/make/: rules
bind_lib/lib/bind/nameser/: Makefile
bind_lib/lib/bind/port/linux/include/: Makefile
bind_lib/lib/bind/resolv/: Makefile
bind_lib/lib/bind9/: Makefile
bind_lib/lib/bind9/include/: Makefile
bind_lib/lib/bind9/include/bind9/: Makefile
bind_lib/lib/dns/: Makefile  gen
bind_lib/lib/dns/include/: Makefile
bind_lib/lib/dns/include/dns/: Makefile  enumclass.h  masterdump.h  rdatastruct.h
bind_lib/lib/dns/include/dst/: Makefile
bind_lib/lib/dns/sec/: Makefile
bind_lib/lib/dns/sec/dst/: Makefile
bind_lib/lib/dns/sec/dst/include/: Makefile
bind_lib/lib/dns/sec/dst/include/dst/: Makefile
bind_lib/lib/dns/tests/: Makefile
bind_lib/lib/dns/win32/: libdns.def  libdns.dsp
bind_lib/lib/irs/: Makefile
bind_lib/lib/irs/include/: Makefile
bind_lib/lib/irs/include/irs/: Makefile
bind_lib/lib/isc/: Makefile
bind_lib/lib/isc/include/: Makefile
bind_lib/lib/isc/include/isc/: Makefile  platform.h
bind_lib/lib/isc/include/pk11/: Makefile
bind_lib/lib/isc/include/pkcs11/: Makefile
bind_lib/lib/isc/nls/: Makefile
bind_lib/lib/isc/nothreads/: Makefile
bind_lib/lib/isc/nothreads/include/: Makefile
bind_lib/lib/isc/nothreads/include/isc/: Makefile
bind_lib/lib/isc/pthreads/: Makefile
bind_lib/lib/isc/pthreads/include/: Makefile
bind_lib/lib/isc/pthreads/include/isc/: Makefile
bind_lib/lib/isc/tests/: Makefile
bind_lib/lib/isc/unix/: Makefile
bind_lib/lib/isc/unix/include/: Makefile
bind_lib/lib/isc/unix/include/isc/: Makefile
bind_lib/lib/isc/unix/include/pkcs11/: Makefile
bind_lib/lib/isc/win32/: libisc.def  libisc.dsp  libisc.vcxproj.filters.in  libisc.vcxproj.in
bind_lib/lib/isc/x86_32/: Makefile
bind_lib/lib/isc/x86_32/include/: Makefile
bind_lib/lib/isc/x86_32/include/isc/: Makefile
bind_lib/lib/isccc/: Makefile
bind_lib/lib/isccc/include/: Makefile
bind_lib/lib/isccc/include/isccc/: Makefile
bind_lib/lib/isccfg/: Makefile
bind_lib/lib/isccfg/include/: Makefile
bind_lib/lib/isccfg/include/isccfg/: Makefile
bind_lib/lib/lwres/: Makefile
bind_lib/lib/lwres/include/: Makefile
bind_lib/lib/lwres/include/lwres/: Makefile
bind_lib/lib/lwres/man/: Makefile
bind_lib/lib/lwres/tests/: Makefile
bind_lib/lib/lwres/unix/: Makefile
bind_lib/lib/lwres/unix/include/: Makefile
bind_lib/lib/lwres/unix/include/lwres/: Makefile
bind_lib/lib/samples/: Makefile
bind_lib/lib/tests/: Makefile
bind_lib/lib/tests/include/: Makefile
bind_lib/lib/tests/include/tests/: Makefile
bind_lib/make/: Makefile  includes  mkdep  rules
bind_lib/win32utils/: BuildAll.bat  BuildSetup.bat  readme1st.txt  win32-build.txt
mydns/: .clang-format  CMakeLists-spd.txt.in  CMakeLists.txt  CMakeLists.txt.in  Dockerfile  Makefile  bc.c  cmock.txt.in  dns.c  dns.h  main.c  main.cpp  ns_to_ip.sh  run_all.sh  spdlog.txt.in  x00117_1_filtered.dat_2
mydns/DnsQuery/: CMakeLists.txt
mydns/DnsQuery/inc/: dns.h  dns_packet.h  dns_received_packet_reader.h  dns_response_file_writer.h  dns_response_parser.h  dns_tcp.h  dns_udp.h  utils.h
mydns/DnsQuery/src/: dns.c  dns_packet.c  dns_received_packet_reader.c  dns_response_file_writer.c  dns_response_parser.c  dns_tcp.c  dns_udp.c  utils.c
mydns/DnsQuery/test/: CMakeLists.txt  DnsReadAnswersTest.cpp  DnsReceivedPacketReaderTest.cpp  DnsResponseTest.hpp  DnsTcpRequestSenderTest.cpp  dnsUtilsUnitTest.cpp  dns_ut.cpp
mydns/DnsQuery/test/mocks/: FileMock.cpp  FileMock.h  SocketMock.cpp  SocketMock.h  SystemFunctionMock.cpp  SystemFunctionMock.h  dnsMock.cpp  dnsMock.h  dnsPackerReaderMock.cpp  dnsPacketReaderMock.h  dnsResponseFileWriterMock.cpp  dnsResponseFileWriterMock.h
mydns/SystemFunctionProxy/: CMakeLists.txt
mydns/SystemFunctionProxy/inc/: proxy_functions.h
mydns/SystemFunctionProxy/src/: proxy_functions.c
mydns/inc/: dns.h  dns_packet.h  dns_received_packet_reader.h  dns_response_parser.h  dns_tcp.h  dns_udp.h  dummyFunc.h  utils.h
mydns/inc/DnsQuery/: dns_tcp.h
mydns/inc/cmock/: cmock-function-mockers.h  cmock-spec-builders.h  cmock.h
mydns/src/: CMakeLists.txt  dns.c  dns_packet.c  dns_received_packet_reader.c  dns_response_parser.c  dns_tcp.c  dns_udp.c  dummyFunc.c  main.cpp  utils.c
mydns/src/DnsQuery/: dns.c  dns_packet.c  dns_received_packet_reader.c  dns_response_parser.c  dns_tcp.c  dns_udp.c
mydns/test/: CMakeLists.txt  DnsReceivedPacketReaderTest.cpp  cmock-function-mockers_test.cc  cmock-spec-builders_test.cc  dnsUtilsUnitTest.cpp  dns_ut.cpp  runUnitTests
mydns/test/mocks/: SocketMock.cpp  SocketMock.h  dnsMock.cpp  dnsMock.h  testMock.c  testMock.h
(+427 files in other folders)
